2008-10-16 fabien
* change css to have all the tabs of the forms (actions) on the right instead of have the first on right and the others in the middle

2008-10-15 fabien
* update some listbox to display the last application in first
* update css
* add some rights on assignee to the validated state on egov_universal_workflow. This avoid a security error if an agent have an assigned application and refuse it (it will change the state of the application to validated and redirect the agent on it).
* update some listbox to be able to handle searchable text and to be able to sort application by modification date (descending)
* make possible to return on the form page, even if the form has been submitted, this permit to see what have been entered in the form, but it's not possible to modify it
* display logout button on every pages

2008-10-10 fabien
bring some corrections after the Mme Ba review :
* remove Mandate form from the allowed form list because it's not implemented yet
* improve EGov_goToDocument script
* update WebSite_login page template to redirect form user on view if the state of the document is draft (to be able to continue the subscription)
* modify checkAccountInexistance workflow script to use ninea number instead of rccm one to check that the company don't exists
* modify "Save draft and continue later" button behavior. Now when you click on, data are saved and a page is displayed with your credentials (if it's an anonymous application)
* add EGov_Base_editAndRedirect script that save the data of the current form and redirect to

2008-09-25 fabien
* modify some selection_name on listbox to be unique and avoid conflic

2008-09-23 fabien
* remove standardSecurity extension. The name was in conflict with an Extension in erp5_core. Move it in safi_egov bt and rename it in ERP5EGov_Security.

2008-09-12 fabien
* Change all indentation, thanks to julien patch