@@ -1,3 +1,6 @@
+2008-10-20 fabien
+* update ERP5Site_getSecurityFromLatestWorkflowHistory  to remove workflow hardcoded value
+
 2008-10-16 fabien
 * change css to have all the tabs of the forms (actions) on the right instead of have the first on right and the others in the middle
 
